# python_in_condaenv_in_snakemake_in_poetry_env

./: .gitignore  README.md  Snakefile  env.yaml  log.txt  pyproject.toml
test_snakemake/: main.py
